[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = ""
authors = ["Ihor Savenko <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
beanie = ">=2.0.0,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
motor = ">=3.7.1,<4.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.5.0,<4.0.0" }
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-multipart = ">=0.0.20,<0.0.21"
pyjwt = ">=2.10.1,<3.0.0"
httpx = "^0.28.1"
aiosmtplib = "^4.0.2"
prometheus-fastapi-instrumentator = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
